# STCAI

./: README.md
.github/workflows/: cloud.yml  edge.yml
cloud/: .env.example  README.md  docker-compose.yml
cloud/api/: Dockerfile  go.mod
cloud/init-db/: 00-run-schemas.sh  01-tenant.sql  02-license.sql  03-events.sql  04-seed.sql  05-edge-api-key.sql  06-events-unique.sql
docs/: CUSTOMER-ONBOARDING.md  DELIVERABLES-INDEX.md  DEPLOYMENT.md  INSTALLATION.md
docs/api/: README.md  edge-sync-api.md  openapi-cloud.yaml
docs/architecture/: 01-global-system-architecture.md  02-cloud-saas-architecture.md  03-event-flow-diagram.md
docs/business/: 01-business-model-tiers-pricing.md  02-go-to-market-competitive.md  03-investor-structure.md  04-12-month-roadmap.md  05-brand-positioning.md  06-advanced-intelligence.md
docs/devops/: 01-ci-cd-pipeline.md  02-scaling-strategy.md  03-monitoring-logging-dr.md  04-cost-optimization.md
docs/edge/: 01-edge-core-spec.md  02-ai-modules.md  03-hardware-automation.md
docs/mobile/: 01-mobile-app-spec.md
docs/schemas/: 01-cloud-tenant-identity.sql  02-cloud-license.sql  03-cloud-events-analytics.sql  04-edge-local.sql  README.md
docs/security/: 01-threat-model.md  02-license-engine.md  03-provisioning-onboarding.md
edge/: README.md
edge/data/: riskintel.db
edge/event_engine/: README.md  (+1 more)
edge/ingestion/: Cargo.toml  Dockerfile  config.example.json
edge/ingestion/src/: main.rs
edge/sync/: Cargo.toml
edge/sync/src/: lib.rs  main.rs
mobile/: README.md  pubspec.yaml
scripts/: README.md  run-cloud-dev.ps1
(+30 files in other folders)
